--- a/client/src/css/Media.css
+++ b/client/src/css/Media.css
@@ -1,11 +1,96 @@
 .media-page {
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-wrap: wrap; */
+    /* height: 100%; */
+    height: inherit;
+    /* background-color: red; */
 }
 
-.media-content {
+/* .media-content {
     margin: 10px;
     border-radius: 10px;
     padding: 10px;
     background-color: rgb(179, 194, 206);
+    width: 45%;
+} */
+
+.clip-listing {
+    position: relative;
+    background-color: #979797;
+    height: 50px;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 15px;
+    box-shadow: 5px 5px 5px rgb(68, 68, 68);
+    border-radius: 10px;
+    vertical-align: middle;
+}
+
+.clip-listing:hover {
+    background-color: #7e7e7e;
+    cursor: pointer;
+}
+
+.listing-element {
+    flex: 1;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    white-space: nowrap;
+    word-break: break-all;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    /* max-width: 25%; */
+    /* max-height: fit-content; */
+}
+
+#title {
+    max-width: 40%;
+}
+
+#uploader {
+    max-width: 30%;
+}
+
+#filename {
+    max-width: 20%;
+}
+
+#duration {
+    max-width: 10%;
+}
+
+.thumbnail {
+    display: none;
+    position:relative;
+    z-index: 1;
+    top: 40%;
+    left: 50%;
+    -ms-transform: translate(-50%, 0%);
+    transform: translate(-50%, 0%);
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgb(68, 68, 68);
+    max-height: 25vh;
+    max-width: 50vw;
+}
+
+.clip-listing:hover .thumbnail {
+    display:  block;
+}
+
+.video-popup {
+    background-color: #889577;
+    position: absolute;
+    top: 5vh;
+    left: 5vw;
+    width: 90vw;
+    height: 90vh;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+}
+
+.video-player {
+    height: 85%;
+    width: 95%;
+    top: 50%;
 }
