--- a/client/src/css/Media.css
+++ b/client/src/css/Media.css
@@ -3,6 +3,7 @@
     flex-wrap: wrap; */
     /* height: 100%; */
     height: inherit;
+    width: inherit;
     /* background-color: red; */
 }
 
@@ -21,7 +22,7 @@
     width: 90%;
     margin: auto;
     margin-bottom: 15px;
-    box-shadow: 5px 5px 5px rgb(68, 68, 68);
+    /* box-shadow: 5px 5px 5px rgb(68, 68, 68); */
     border-radius: 10px;
     vertical-align: middle;
 }
@@ -68,7 +69,7 @@
     -ms-transform: translate(-50%, 0%);
     transform: translate(-50%, 0%);
     border-radius: 10px;
-    box-shadow: 5px 5px 5px rgb(68, 68, 68);
+    /* box-shadow: 5px 5px 5px rgb(68, 68, 68); */
     max-height: 25vh;
     max-width: 50vw;
 }
@@ -78,7 +79,7 @@
 }
 
 .video-popup {
-    background-color: #889577;
+    background-color: #252525;
     position: absolute;
     top: 5vh;
     left: 5vw;
@@ -87,6 +88,8 @@
     z-index: 2;
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
+    color: rgb(219, 219, 219);
 }
 
 .video-player {
