--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,3 +1,21 @@
+:root {
+  --discord-color: rgb(88, 101, 242);
+  --discord-color-darker: rgb(63, 73, 179);
+  --primary-font: "Whitney","Helvetica Neue","Helvetica","Arial",sans-serif;
+  --primary-color: rgb(238, 238, 238);
+  --gbot-blue: rgb(2, 116, 204);
+  --gbot-orange: rgb(206, 82, 0);
+  --dark-gray: rgb(36, 37, 38);
+  --lighter-gray: rgb(172, 172, 172);
+  --dark-blue: rgb(40, 44, 52);
+  --cyan: rgb(96, 191, 255);
+  --black: rgb(0,0,0);
+  --navy-blue: rgb(0, 0, 128);
+  --dark-cyan: rgb(0, 128, 202);
+  --shadow: rgba(0, 0, 0, 0.2);
+  --light-shadow: rgba(0, 0, 0, 0.1);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
