--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -34,7 +34,7 @@ footer {
 .navlink:hover {
   color: var(--primary-color);
   background-color: rgba(97, 97, 97, 0.199);
-  border-radius: 10px 10px 0 0;
+  /* border-radius: 10px 10px 0 0; */
   border-bottom: 5px solid var(--light-shadow);
 }
 
