--- a/client/src/css/Panel.css
+++ b/client/src/css/Panel.css
@@ -3,3 +3,26 @@
     width: inherit;
     flex-direction: column;
 }
+
+.user {
+    position: relative;
+    height: 4vh;
+    width: 75%;
+    margin: auto;
+    background-color: var(--primary-color);
+    top: 1vh;
+    border: solid 2px;
+    border-radius: 5px;
+}
+
+.user > * {
+    margin: auto;
+}
+
+.delete-btn {
+    background-color: rgb(255, 98, 98);
+    border-radius: 5px;
+    border: solid 1px rgb(255, 139, 139);
+    height: 3vh;
+    font-weight: 800;
+}
