--- a/client/src/css/Panel.css
+++ b/client/src/css/Panel.css
@@ -4,6 +4,11 @@
     flex-direction: column;
 }
 
+.userlist {
+    height: 90%;
+    overflow-y: auto;
+}
+
 .user {
     position: relative;
     height: 4vh;
@@ -17,6 +22,11 @@
 
 .user > * {
     margin: auto;
+}
+
+#usertag {
+    text-align: left;
+    width: 50%;
 }
 
 .delete-btn {
