--- a/client/src/css/Structures.css
+++ b/client/src/css/Structures.css
@@ -1,6 +1,3 @@
-.dropdown {
-
-}
 
 .dropdown-list {
     display: none;
@@ -8,12 +5,12 @@
     z-index: 1;
     background-color: var(--lighter-gray);
     min-width: 10vw;
-    min-height: 15vh;
+    /* min-height: 15vh; */
     max-height: 35vh;
     overflow-y: auto;
     /* left: 50%; */
     /* top: 3vh; */
-    /* transform: translate(-50%); */
+    transform: translate(-25%);
 }
 
 .dropdown:hover .dropdown-list {
@@ -43,4 +40,13 @@
 
 .dropdown input {
     height: 1.6vh;
+}
+
+.popup {
+    position: absolute;
+    /* width: 50vw; */
+    width: 100%;
+    height: 50vh;
+    background-color: blueviolet;
+    left: 0;
 }
