--- a/client/src/css/Panel.css
+++ b/client/src/css/Panel.css
@@ -36,3 +36,29 @@
     height: 3vh;
     font-weight: 800;
 }
+
+.listing-element {
+    flex: 1;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    white-space: nowrap;
+    word-break: break-all;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+#title {
+    max-width: 25%;
+}
+
+#filename {
+    max-width: 65%;
+}
+
+#duration {
+    max-width: 10%;
+}
+
+#delete-btn {
+    max-width: 10%;
+}
