--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -10,6 +10,7 @@
   --black: rgb(0,0,0);
   --navy-blue: rgb(0, 0, 128);
   --dark-cyan: rgb(0, 128, 202);
+  --gbot-blue: #0274CC;
   --shadow: rgba(0, 0, 0, 0.2);
   --light-shadow: rgba(0, 0, 0, 0.1);
   --medium-gray: rgb(99, 99, 99);
