--- a/client/src/css/Panel.css
+++ b/client/src/css/Panel.css
@@ -14,6 +14,7 @@
     height: 4vh;
     width: 75%;
     margin: auto;
+    margin-bottom: 1vh;
     background-color: var(--primary-color);
     top: 1vh;
     border: solid 2px;
