--- a/client/src/css/Structures.css
+++ b/client/src/css/Structures.css
@@ -46,6 +46,8 @@
     /* width: 50vw; */
     width: 100%;
     height: 50vh;
-    background-color: blueviolet;
+    background-color: var(--lighter-gray);
     left: 0;
+    top: 7vh;
+    z-index: 1;
 }
