--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -80,8 +80,10 @@ footer {
 }
 
 @media screen and (max-width: 720px) {
+
   .foreground {
     width: 100vw;
+    height: 79vh;
     margin: 0px;
   }
 }
