--- a/client/src/css/Panel.css
+++ b/client/src/css/Panel.css
@@ -38,6 +38,12 @@
     font-weight: 800;
 }
 
+.clip-listing {
+    margin-left: 1vw;
+    margin-right: 1vw;
+    width: auto;
+}
+
 .listing-element {
     flex: 1;
     margin-left: 1vw;
