--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -49,6 +49,21 @@ footer {
 .background {
   background-color: var(--gbot-blue);
   height: 86vh;
+  /* background-color: #406c7e; */
+  /* opacity: 0.4; */
+  background-image: linear-gradient(30deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff),
+  linear-gradient(150deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff),
+  linear-gradient(30deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff),
+  linear-gradient(150deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff),
+  linear-gradient(60deg, #ffffff77 25%, transparent 25.5%, transparent 75%, #ffffff77 75%, #ffffff77),
+  linear-gradient(60deg, #ffffff77 25%, transparent 25.5%, transparent 75%, #ffffff77 75%, #ffffff77);
+  background-size: 52px 91px;
+  background-position: 0 0,
+  0 0,
+  26px 46px,
+  26px 46px,
+  0 0,
+  26px 46px;
 }
 
 .foreground {
